--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "next-themes": "latest",
     "nodemailer": "latest",
     "path": "latest",
+    "pg": "^8.16.3",
     "postgres": "latest",
     "react": "^19",
     "react-day-picker": "latest",
@@ -130,6 +131,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
     "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
