--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@radix-ui/react-toggle": "latest",
     "@radix-ui/react-toggle-group": "latest",
     "@radix-ui/react-tooltip": "latest",
+    "@radix-ui/react-visually-hidden": "^1.2.3",
     "bcryptjs": "latest",
     "child_process": "latest",
     "class-variance-authority": "^0.7.1",
@@ -124,7 +125,7 @@
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "latest",
+    "vaul": "^1.1.2",
     "zod": "latest"
   },
   "devDependencies": {
