--- a/package.json
+++ b/package.json
@@ -107,12 +107,15 @@
     "date-fns": "^2.30.0",
     "embla-carousel-react": "latest",
     "fs": "latest",
+    "gsap": "^3.13.0",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.22",
     "next": "15.2.4",
     "next-auth": "latest",
     "next-themes": "latest",
     "nodemailer": "latest",
+    "ogl": "^1.0.11",
     "path": "latest",
     "pg": "^8.16.3",
     "postgres": "latest",
@@ -122,6 +125,7 @@
     "react-hook-form": "latest",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "latest",
+    "react-router-dom": "^7.9.3",
     "recharts": "latest",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
