--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "fs": "latest",
     "gsap": "^3.13.0",
     "input-otp": "latest",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.22",
     "next": "15.2.4",
