--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "gsap": "^3.13.0",
     "input-otp": "latest",
     "lenis": "^1.3.11",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.22",
     "next": "15.2.4",
@@ -118,6 +119,7 @@
     "nodemailer": "latest",
     "ogl": "^1.0.11",
     "path": "latest",
+    "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
     "postgres": "latest",
     "react": "^19",
