added chat feature

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "db:status": "node scripts/check-db.js",
     "deps:check": "npm outdated",
     "deps:update": "npm update",
-    "dev": "next dev",
+    "dev": "node server.js",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "postinstall": "echo Installation complete!",
@@ -39,7 +39,7 @@
     "prepare": "husky install || true",
     "security:audit": "npm audit",
     "security:fix": "npm audit fix",
-    "start": "next start",
+    "start": "node server.js",
     "test:format": "npm run format:check",
     "test:lint": "npm run lint",
     "test:type": "npm run type-check",
@@ -130,6 +130,8 @@
     "react-resizable-panels": "latest",
     "react-router-dom": "^7.9.3",
     "recharts": "latest",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
