added files for deploy SocketIo

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "deps:check": "npm outdated",
     "deps:update": "npm update",
     "dev": "node server.js",
+    "dev:socket": "node socket-server.js",
+    "dev:next": "next dev",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "postinstall": "echo Installation complete!",
@@ -40,6 +42,7 @@
     "security:audit": "npm audit",
     "security:fix": "npm audit fix",
     "start": "node server.js",
+    "start:socket": "node socket-server.js",
     "test:format": "npm run format:check",
     "test:lint": "npm run lint",
     "test:type": "npm run type-check",
